<resources>
    <string name="app_name">View_And_Strings_Test</string>
    <string name="def_string">Default String</string>
    <string name="chng_string">Changed String</string>
</resources>
